single/20-influxdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb-service
  namespace: smarthome
spec:
  selector:
    app: influxdb
  ports:
    - name: tcp-8086
      protocol: TCP
      port: 8086
