single/10-iobroker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iobroker
  namespace: smarthome
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "selfsigned-cluster-issuer"
spec:
  tls:
  - hosts:
    - iobroker.lab
    secretName: iobroker.lab
  rules:
  - host: iobroker.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iobroker-service
            port:
              number: 8081
